--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -33,7 +33,7 @@ body {
 	font-family: 'Oxygen', sans-serif;
 }
 
-header h1{
+header h1 {
 	margin-top: 5px;
 }
 
@@ -45,7 +45,7 @@ video {
 /* Font Family---------------------------------------- */
 
 .Birra2 {
-	font-family: birra-2,serif;
+	font-family: birra-2, serif;
 	font-weight: 700;
 	font-style: normal;
 }
@@ -85,7 +85,7 @@ li.active {
 }
 
 li.quickaccessandsearch {
-    display: inline-block;
+	display: inline-block;
 }
 
 .search {
@@ -96,14 +96,14 @@ li.quickaccessandsearch {
 	padding: 20px;
 	margin: 50px auto 0px auto;
 	width: 82%;
-	
+
 }
 
 h1 {
 	font-family: 'Oswald', sans-serif;
 	font-size: 36px;
 	padding: 15px;
-	
+
 }
 
 h2 {
@@ -112,12 +112,12 @@ h2 {
 
 h3 {
 	font-size: 20px;
-    padding: 15px;
-    text-align: left;
-    margin-left: 20px;
-    font-weight: 500;
-    line-height: 2.7;
-    letter-spacing: 0.8px;
+	padding: 15px;
+	text-align: left;
+	margin-left: 20px;
+	font-weight: 500;
+	line-height: 2.7;
+	letter-spacing: 0.8px;
 }
 
 p.quote {
@@ -157,19 +157,21 @@ p.quote {
 	color: #8c6b48;
 }
 
-th, td {
+th,
+td {
 	border: 2px solid #8c6b48;
 }
 
 table {
-    background-color: #242f47;
+	background-color: #242f47;
 	font-family: 'Oswald', sans-serif;
 	color: #FFF;
 	border-collapse: collapse;
-    margin: 40px auto;
+	margin: 40px auto;
 }
 
-td, th {
+td,
+th {
 	width: 300px;
 }
 
@@ -201,20 +203,22 @@ form h1 {
 	border-radius: 40px;
 }
 
-.subject label, .emailnotifications label {
+.subject label,
+.emailnotifications label {
 	margin-right: 25px;
 }
 
 /* Footer---------------------------------------- */
 
 footer {
-    margin-top: 50px;
-    width: 100%;
-    bottom: 0px;
-    background-color: #242f44;
+	margin-top: 50px;
+	width: 100%;
+	bottom: 0px;
+	background-color: #242f44;
 	z-index: 5;
 	color: #FFF;
 }
+
 footer h3 {
 	display: inline-block;
 	font-size: 14px;
